--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
   "description": "Senior Project, mood tracking web app, spring 2024.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cross-env NODE_ENV=test jest --testTimeout=5000",
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "Kalicia Ashcraft",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
+    "jest": "^29.7.0",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.1.3"
+    "mongoose": "^8.1.3",
+    "supertest": "^6.3.4"
   }
 }
