--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Kalicia Ashcraft",
   "license": "ISC",
   "dependencies": {
+    "chart.js": "^4.4.2",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.4",
@@ -18,6 +19,7 @@
     "jest": "^29.7.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.3",
-    "supertest": "^6.3.4"
+    "supertest": "^6.3.4",
+    "vue-chartjs": "^5.3.1"
   }
 }
